--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,21 +4,18 @@ description: This is the demo for chat app by Flutter
 dependencies:
   flutter:
     sdk: flutter
-
+  http: ^0.13.0
+  dio: ^4.0.4
+  flutter_dotenv: ^5.0.2
   cupertino_icons: ^0.1.3
-  firebase_core: 1.1.0
-  firebase_auth: 1.1.3
-  google_sign_in: 5.0.2
-  cloud_firestore:  2.0.0
   fluttertoast: 8.0.6
   image_picker: 0.7.4
   shared_preferences: 2.0.5
-  firebase_storage: 8.0.5
   intl: 0.17.0
-  firebase_messaging: 9.1.3
   flutter_local_notifications: 5.0.0+4
   photo_view: 0.12.0
   provider: ^6.0.1
+  web_socket_channel: ^2.1.0
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +26,7 @@ flutter:
 
   assets:
     - images/
+    - .env
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
